Fixed the alignemnt and size of the tablet navigation logo

--- a/css/styles.css
+++ b/css/styles.css
@@ -173,7 +173,11 @@
       justify-content: center; }
 
   .listItem {
-    padding: 0 20px; } }
+    padding: 0 20px; }
+
+  .navLogo {
+    text-align: center;
+    width: 50%; } }
 @media screen and (min-width: 900px) {
   .navContainer {
     flex-direction: row;
