--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -71,6 +71,11 @@
     .listItem {
         padding: 0 20px;
     }
+
+    .navLogo {
+        text-align: center;
+        width: 50%;
+    }
 }
 
 @media screen and (min-width: 900px) {
